# Project_2

./: pyproject.toml  requirements.txt
src/: abs_storage.py  abstract_api_class.py  api_for_hh.py  json_saver.py  parser.py  sorting_vacancies.py  user_interaction.py  vacancy.py
tests/: conftest.py  test_api_for_hh.py  test_json_saver.py  test_vacancy.py
